--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "stripe/stripe-php": "^13.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
