--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "apexcharts": "^3.45.1",
         "bootstrap": "^5.3.2",
-        "flowbite": "^2.2.1"
+        "flowbite": "^2.2.1",
+        "jquery": "^3.7.1"
     }
 }
